workout buddy trained

--- a/perdict.ipynb
+++ b/perdict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        " 'LanguageTechnology': 0.11389697343111038}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,6 +62,45 @@
     "print(\"entities\", doc_from_pretrained.ents)\n",
     "print(\"sentences\", list(doc_from_pretrained.sents))\n",
     "print(\"classification\", doc_from_pretrained.cats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "\n",
+    "trained_nlp = spacy.load(\"output/workout_buddy/model-best\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ACTION': 0.07289097458124161,\n",
+       " 'TRAINING': 0.3335314989089966,\n",
+       " 'EXERCISE': 0.5590595602989197,\n",
+       " 'USER': 0.034517984837293625}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's try it on an example text\n",
+    "text = \"Hello\\n I'm looking for data about birds in New Zealand.\\nThe dataset would contain the birds species, colors, estimated population etc.\"\n",
+    "# Perform the trained pipeline on this text\n",
+    "doc = trained_nlp(text)\n",
+    "# We can display the predicted categories\n",
+    "doc.cats"
    ]
   }
  ],
